# scrolly

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
app/: index.py
scripts/: __init__.py  build.py  index.py
scrolly/: __main__.py  build.py  index.py  separateAudio.py
