[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrolly"
version = "0.0.1"
authors = [
  { name="Wang Jiefan", email="wng.jiefan@gmail.com" },
]
description = "The ultimate karaoke workflow."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nafeij/scrolly"
"Bug Tracker" = "https://github.com/Nafeij/scrolly/issues"